// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Home Page renders additional videos from useAPI result when scrollbar is at bottom 1`] = `
<div>
  <div
    class="sc-ggWZvA bWVpDv"
  >
    <div
      class="sc-dFVmKS oZxKB"
    >
      <img
        alt="Thumbnail image"
        class="sc-hjsuWn dvtMdC"
      />
      <p
        class="sc-dTvVRJ dmYGZj"
      >
        Video 1
      </p>
    </div>
    <div
      class="sc-kCuUfV jYcHYQ"
    >
      <img
        alt="Thumbnail image"
        class="sc-hjsuWn dvtMdC"
      />
      <p
        class="sc-dTvVRJ dmYGZj"
      >
        Video 2
      </p>
    </div>
    <div
      class="sc-dNdcvo kvsJrk"
    >
      <img
        alt="Thumbnail image"
        class="sc-hjsuWn dvtMdC"
      />
      <p
        class="sc-dTvVRJ dmYGZj"
      >
        Video 3
      </p>
    </div>
    <div
      class="sc-fbQrwq kjbnsJ"
    >
      <img
        alt="Thumbnail image"
        class="sc-hjsuWn dvtMdC"
      />
      <p
        class="sc-dTvVRJ dmYGZj"
      >
        Video 4
      </p>
    </div>
    <div
      class="sc-gGKoUb eyEExD"
    >
      <img
        alt="Thumbnail image"
        class="sc-hjsuWn dvtMdC"
      />
      <p
        class="sc-dTvVRJ dmYGZj"
      >
        Video 5
      </p>
    </div>
    <div
      class="sc-hwddKA hhxvwh"
    >
      <img
        alt="Thumbnail image"
        class="sc-hjsuWn dvtMdC"
      />
      <p
        class="sc-dTvVRJ dmYGZj"
      >
        Video 6
      </p>
    </div>
  </div>
</div>
`;

exports[`Home Page renders videos from useAPI result 1`] = `
<div>
  <div
    class="sc-ggWZvA bWVpDv"
    style=""
  >
    <div
      class="sc-jJLAfE djTEPG"
    >
      <img
        alt="Thumbnail image"
        class="sc-hjsuWn dvtMdC"
      />
      <p
        class="sc-dTvVRJ dmYGZj"
      >
        Video 1
      </p>
    </div>
    <div
      class="sc-hwkwBN jxUKGv"
    >
      <img
        alt="Thumbnail image"
        class="sc-hjsuWn dvtMdC"
      />
      <p
        class="sc-dTvVRJ dmYGZj"
      >
        Video 2
      </p>
    </div>
    <div
      class="sc-kNOymR iFLlLI"
    >
      <img
        alt="Thumbnail image"
        class="sc-hjsuWn dvtMdC"
      />
      <p
        class="sc-dTvVRJ dmYGZj"
      >
        Video 3
      </p>
    </div>
  </div>
</div>
`;

exports[`Home Page shows error message when hasError is set 1`] = `
<div>
  <div
    class="sc-ggWZvA bWVpDv"
  >
    <p>
      API error
    </p>
  </div>
</div>
`;

exports[`Home Page shows loader when isLoading is true 1`] = `
<div>
  <div
    class="sc-ggWZvA bWVpDv"
  >
    <div
      class="sc-bRKDuR fMrgJQ"
      role="progressbar"
    >
      <svg
        class="spinner"
        viewBox="0 0 50 50"
      >
        <circle
          class="path"
          cx="25"
          cy="25"
          fill="none"
          r="20"
          stroke-width="5"
        />
      </svg>
    </div>
  </div>
</div>
`;
